k8s/billing.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: billing
spec:
  replicas: 1
  selector:
    matchLabels:
      app: billing
  template:
    metadata:
      labels:
        app: billing
    spec:
      containers:
      - name: billing
        image: 637341921879.dkr.ecr.ap-northeast-2.amazonaws.com/coffee_machine:billing-4e6621768595eefdcee34815d32ebf07c3027fbd
        imagePullPolicy: Always
        ports:
        - containerPort: 8000
---
apiVersion: v1
kind: Service
metadata:
  name: billing
spec:
  ports:
  - port: 80
    targetPort: 8000
  selector:
    app: billing
