k8s/inventory.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: inventory
spec:
  replicas: 1
  selector:
    matchLabels:
      app: inventory
  template:
    metadata:
      labels:
        app: inventory
    spec:
      containers:
      - name: inventory
        image: 637341921879.dkr.ecr.ap-northeast-2.amazonaws.com/coffee_machine:inventory-latest
        imagePullPolicy: Always
        ports:
        - containerPort: 8000
---
apiVersion: v1
kind: Service
metadata:
  name: inventory
spec:
  ports:
  - port: 80
    targetPort: 8000
  selector:
    app: inventory
